# OOP

lab_01/lab_01/: CMakeLists.txt  consts.h  draw.cpp  draw.h  edge.cpp  edge.h  edges.cpp  edges.h  figure.cpp  figure.h  helpful.cpp  helpful.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  point.cpp  point.h  points.cpp  points.h  request_manager.cpp  request_manager.h  ui_mainwindow.h
lab_01/lab_01/data/: cube.txt  pyramid.txt  rotated.txt
lab_02/: CMakeLists.txt
lab_02/build_wsl/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab_02  lab_02[1]_include.cmake  lab_02[1]_tests.cmake
lab_02/collections/: concepts.h
lab_02/collections/set/: set.h  set.hpp
lab_02/collections/set/const_iterator/: const_set_iterator.h  const_set_iterator.hpp
lab_02/collections/set/node/: set_node.h  set_node.hpp
lab_02/collections/set/test/: set_tests.hpp  std_compatibility_tests.hpp
